<resources>
    <string name="app_name">QuiPro</string>

    <!-- Strings related to login -->
    <string name="reg_name">Name</string>
    <string name="reg_button">REGISTER</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."

    </string>
    <string name="confirm_registry">Create a new account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pass">Enter Password</string>
    <string name="updatingReport">Updating</string>

    <string name="title_activity_home1">Home1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
</resources>
